--- a/operation-service/pom.xml
+++ b/operation-service/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>operation-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>operation-service</name>
-    <description>Operation Service of Operation Manager distributed system</description>
+    <description>Operation Service in Operation Manager distributed system</description>
 
     <properties>
         <java.version>1.8</java.version>
