--- a/schedule-service/pom.xml
+++ b/schedule-service/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>schedule-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>schedule-service</name>
-    <description>Schedule Service of Operation Manager distributed system</description>
+    <description>Schedule Service in Operation Manager distributed system</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -42,6 +42,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.3.7.RELEASE</version>
         </dependency>
     </dependencies>
 
