--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.port=2000
 #actuator
 management.server.port=2001
 management.endpoints.web.exposure.include=*
+#redis
+spring.redis.host=localhost
+spring.redis.port=6379
