add Redis and MessageConsumer in Report Service

--- a/report-service/src/main/resources/application.properties
+++ b/report-service/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.port=3000
 #actuator
 management.server.port=3001
 management.endpoints.web.exposure.include=*
+#redis
+spring.redis.host=localhost
+spring.redis.port=6390
